--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
       .gradient-bg {
         background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
       }
-      .tv-mode-active {
-        overflow: hidden;
-      }
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -43,16 +40,19 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "hls.js": "https://esm.sh/hls.js@^1.6.15"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "hls.js": "https://esm.sh/hls.js@^1.6.15",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
