--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Boa FM Irecê - Rádio & TV Online</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,29 +12,37 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
-        background-color: #0f172a;
+        background-color: #020617;
         color: #f8fafc;
+        overflow-x: hidden;
       }
       .glass {
-        background: rgba(30, 41, 59, 0.7);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
+        background: rgba(15, 23, 42, 0.8);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
       }
-      .gradient-bg {
-        background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
+      /* Custom focus styles for accessibility */
+      :focus-visible {
+        outline: 2px solid #6366f1;
+        outline-offset: 2px;
       }
+      /* Smooth transitions for all interactive elements */
+      button, a {
+        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      /* Hide scrollbar for Chrome, Safari and Opera */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #0f172a;
+        background: #020617;
       }
       ::-webkit-scrollbar-thumb {
-        background: #334155;
-        border-radius: 4px;
+        background: #1e293b;
+        border-radius: 10px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #475569;
+        background: #334155;
       }
     </style>
   <script type="importmap">
@@ -46,7 +54,8 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "hls.js": "https://esm.sh/hls.js@^1.6.15",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
   }
 }
 </script>
